# irregular-object-packing

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config-example.yaml  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  conda_freeze_requirements.txt  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
ci/: bootstrap.py  requirements.txt
docs/: conf.py  installation.rst  requirements.txt  usage.rst
irregular_object_packing/: .env  __main__.py  _version.py  cli.py  prof_compute_cat_cells.pstats  prof_face_coord_to_points_and_faces.pstats
notebooks/:  cdt_limitations.ipynb  _skipped.face  _skipped.node  demo-cat-cells.ipynb  demo-irop-scalability.ipynb  demo-optimisation-step.ipynb  demo-packing-plots-v.ipynb  demo-packing.ipynb  demo-trivial-shapes.ipynb  demo_optimisation.ipynb  demo_tetrahedron_split.ipynb  test-point-order-at-pvmerge.ipynb
profile/: v0.2.1-profile_optimizer.pstats  v0.4.0-numba-cprofile_optimizer-finit=0.78.pstats  v0.4.0-numba-profile_optimizer-finit=0.78.pstats
profiling_results/: v0.1.0-profile_optimizer.pstats  v0.1.1-profile_optimizer.pstats
results/: demo-irop-scalability-res.csv  results_test_2023-06-08-07:09:08_alpha_beta.csv  results_test_2023-06-08-07:56:30_padding.csv
scripts/: j_alpha_beta.sh  j_cellpack.sh  j_irop.sh  j_irop_functional_perf.sh  j_irop_nlc_performance.sh  j_padding.sh  (+1 more)
(+105 files in other folders)
